<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mTextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/copyright"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/mCallLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_weight="4"
        android:background="@drawable/gradient_layout"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mImageViewCall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_call_24"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/mTextViewCall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/call"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/mTextViewSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/time_out"/>

    <TextView
        android:id="@+id/mTextViewSettings2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/for_settings"
        android:textColor="#999999"
        android:textSize="18sp" />

    <Button
        android:id="@+id/mSettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/ic_baseline_settings_24"
        android:onClick="goSettingsClick" />
</LinearLayout>